--- a/dashboard.html
+++ b/dashboard.html
@@ -13,102 +13,105 @@
 <body>
   <!-- ===//start of dashboard section === -->
   <section class="dashboard">
-  <div class="container">
-  <div class="section-header text-center">
-    <h1 class="section-heading">My Account</h1>
-    <span>dashboard</span>
-    <br>
-    <img class="w-100" src="assets/images/membership/dot.png" alt="dott">
-  </div>
-  <div class="section-body">
-    <div class="row">
-      <div class="col-xl-3">
-        <div class="hidden">
-          <button id="menu-show-btn" onclick="menuShow()" class="btn btn-subscribe d-xl-none d-inline">Dashboard Menu</button>
-          <div class="dashboard-side-nav">
-            <ul>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fas fa-home-alt"></i>
-                  <p>Dashboard</p>
-                </a>
-              </li>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fas fa-shopping-cart"></i>
-                  <p>Orders</p>
-                </a>
-              </li>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fas fa-folder"></i>
-                  <p>Memberships</p>
-                </a>
-              </li>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fas fa-home-alt"></i>
-                  <p>Subscriptions</p>
-                </a>
-              </li>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fas fa-map-marker-check"></i>
-                  <p>Addresses</p>
-                </a>
-              </li>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fas fa-credit-card"></i>
-                  <p>Payment methods</p>
-                </a>
-              </li>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fas fa-user"></i>
-                  <p>Account details</p>
-                </a>
-              </li>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fas fa-home-alt"></i>
-                  <p>Bookings</p>
-                </a>
-              </li>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fab fa-discord"></i>
-                  <p>Discord</p>
-                </a>
-              </li>
-              <li>
-                <a class="dashboard-item" href="#">
-                  <i class="fas fa-power-off"></i>
-                  <p>Logout</p>
-                </a>
-              </li>
-            </ul>
+    <div class="main-content">
+      <div class="container">
+        <div class="section-header text-center">
+          <h1 class="section-heading">My Account</h1>
+          <span>dashboard</span>
+          <br>
+          <img class="w-100" src="assets/images/membership/dot.png" alt="dott">
+        </div>
+        
+        <div class="section-body">
+          <div class="row">
+            <div class="col-xl-3">
+              <div class="hidden">
+                <button id="menu-show-btn" onclick="menuShow()" class="btn btn-subscribe d-xl-none d-inline">Dashboard Menu</button>
+                <div class="dashboard-side-nav">
+                  <ul>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fas fa-home-alt"></i>
+                        <p>Dashboard</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fas fa-shopping-cart"></i>
+                        <p>Orders</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fas fa-folder"></i>
+                        <p>Memberships</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fas fa-home-alt"></i>
+                        <p>Subscriptions</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fas fa-map-marker-check"></i>
+                        <p>Addresses</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fas fa-credit-card"></i>
+                        <p>Payment methods</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fas fa-user"></i>
+                        <p>Account details</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fas fa-home-alt"></i>
+                        <p>Bookings</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fab fa-discord"></i>
+                        <p>Discord</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dashboard-item" href="#">
+                        <i class="fas fa-power-off"></i>
+                        <p>Logout</p>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-xl-9">
+              <!-- dashboard content start here -->
+              <div class="dashboard-content mt-4">
+                <div class="text">
+                  <p>
+                    Hello <span>mhatoum86</span> (not mhatoum86? <span>Log out</span> ) <br> <br>
+                    From your account dashboard you can view your <span>recent orders</span>,
+                    <br> manage your <span>shipping and billing addresses,</span> and edit your <br>
+                    <span>password and account details.</span>
+                  </p>
+                </div>
+              </div>
+              <!-- dashboard content end here -->
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="col-xl-9">
-        <!-- dashboard content start here -->
-        <div class="dashboard-content mt-4">
-          <div class="text">
-            <p>
-              Hello <span>mhatoum86</span> (not mhatoum86? <span>Log out</span> ) <br> <br>
-              From your account dashboard you can view your <span>recent orders</span>,
-              <br> manage your <span>shipping and billing addresses,</span> and edit your <br>
-              <span>password and account details.</span>
-            </p>
-          </div>
-        </div>
-        <!-- dashboard content end here -->
       </div>
     </div>
-  </div>
-  </div>
   </section>
   <!-- ===//end of dashboard section === -->
  
