--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
                     <div class="counter">
                       <ul class="d-flex justify-content-center">
                         <li class="count-item">
-                          <div class="number"><p>01</p></div>
+                          <div class="number"><p id="jday">01</p></div>
                           <div class="text"><p>Days</p></div>
                         </li>
                         <li class="count-item">
-                          <div class="number"><p>10</p></div>
+                          <div class="number"><p id="jhour">10</p></div>
                           <div class="text"><p>hrs</p></div>
                         </li>
                         <li class="count-item">
-                          <div class="number"><p>36</p></div>
+                          <div class="number"><p id="jmin">36</p></div>
                           <div class="text"><p>mins</p></div>
                         </li>
                         <li class="count-item">
-                          <div class="number"><p>22</p></div>
+                          <div class="number"><p id="jsec">22</p></div>
                           <div class="text"><p>secs</p></div>
                         </li>
                       </ul>
@@ -170,19 +170,19 @@
                     <div class="counter">
                       <ul class="d-flex justify-content-center">
                         <li class="count-item">
-                          <div class="number"><p>01</p></div>
+                          <div class="number"><p id="lday">01</p></div>
                           <div class="text"><p>Days</p></div>
                         </li>
                         <li class="count-item">
-                          <div class="number"><p>10</p></div>
+                          <div class="number"><p id="lhour">10</p></div>
                           <div class="text"><p>hrs</p></div>
                         </li>
                         <li class="count-item">
-                          <div class="number"><p>36</p></div>
+                          <div class="number"><p id="lmin">36</p></div>
                           <div class="text"><p>mins</p></div>
                         </li>
                         <li class="count-item">
-                          <div class="number"><p>22</p></div>
+                          <div class="number"><p id="lsec">22</p></div>
                           <div class="text"><p>secs</p></div>
                         </li>
                       </ul>
@@ -221,19 +221,19 @@
                     <div class="counter">
                       <ul class="d-flex justify-content-center">
                         <li class="count-item">
-                          <div class="number"><p>01</p></div>
+                          <div class="number"><p id="nday">01</p></div>
                           <div class="text"><p>Days</p></div>
                         </li>
                         <li class="count-item">
-                          <div class="number"><p>10</p></div>
+                          <div class="number"><p id="nhour">10</p></div>
                           <div class="text"><p>hrs</p></div>
                         </li>
                         <li class="count-item">
-                          <div class="number"><p>36</p></div>
+                          <div class="number"><p id="nmin">36</p></div>
                           <div class="text"><p>mins</p></div>
                         </li>
                         <li class="count-item">
-                          <div class="number"><p>22</p></div>
+                          <div class="number"><p id="nsec">22</p></div>
                           <div class="text"><p>secs</p></div>
                         </li>
                       </ul>
