--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="item h-100">
                 <div class="membership-card">
-                  <img class="w-100 color-img" src="assets/images/membership/01.Bronze.png" alt="color">
+                  <img class="w-100 color-img" src="assets/images/membership/01.bronze.png" alt="color">
                   <div class="card-header text-center">
                     <div class="text">
                       <h3>monthly membership <br>
