--- a/index.html
+++ b/index.html
@@ -633,10 +633,10 @@
                   <div class="modal-dialog">
                     <div class="modal-content bg-dark">
                       <div class="modal-header">
-                        <button type="button" class="p-1 btn-close bg-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" onclick="pauseVid()" class="p-1 btn-close bg-light" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        <video class="video ratio h-100" controls>
+                        <video id="myVideo" class="video ratio h-100" controls>
                           <source src="assets/video/Homepage-Stock-Sniper-Trading.mp4" type="video/mp4">
                         </video>
                       </div>
